--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<a href="#" class="icon solid fa-user-circle"><span>Home</span></a>
 						<a href="#certificate" class="icon solid fa-certificate"><span>Certificate</span></a>
 						<a href="#work" class="icon solid fa-code"><span>Project</span></a>
-						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
+						<!-- <a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a> -->
 						<a href="https://www.facebook.com/thienkim9112002/" class="icon brands fa-facebook"><span>Facebook</span></a>
 					</nav>
 
@@ -33,8 +33,8 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Kim Nguyen</h1>
-									<h5>Data Analysis</h5>
-									<h7>My name is Kim, I'm a self-taught Web Developer and Data Analysis. Although I have not got any hands, on experience in a professional working environment, I believe the knowledge and skills I have gaine coupled with my willingness to learn and determination to develop will help me succeed.</h7>
+									<h5>Data Science</h5>
+									<h7>My name is Kim, I'm a self-taught Web Development and Data Science. Although I have not got any hands, on experience in a professional working environment, I believe the knowledge and skills I have gaine coupled with my willingness to learn and determination to develop will help me succeed.</h7>
 								</header>
 								<a href="#certificate" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my certificate</span></span>
@@ -102,9 +102,17 @@
 							<div class="modal-content">
 
 							  <div class="mySlides">
-								  <iframe src="https://drive.google.com/file/d/1xS3F4Gl_U88nRlB19F3EB5_YV4ozFO2y/preview#toolbar=0" width="800" height="480" allow="autoplay"></iframe>
+								  <iframe src="https://drive.google.com/file/d/1xS3F4Gl_U88nRlB19F3EB5_YV4ozFO2y/preview#toolbar=0" width="800" height="400" allow="autoplay"></iframe>
 
 							  </div>
+							  	<h4> Python's Projects</h4>
+								<p> Below is the link that connected to the web for two simple Python games that I have worked with my group in Programming Design at my university.</p>
+								<a href="https://kimnguyen2002.github.io/Group12/" target ="_blank" class="button">Learn More</a>
+								
+								<br/><h4> Top 5 Fast - Food Chains in USA</h4>
+								<p> I extracted data from csv file with top 50 Fast - Foods to only top 5 Fast - Food Chains due to US Systemwide Sales and Average Sales per Unit.
+									This button bellow will link you to Google Colab for a full view</p>
+								<a href="https://drive.google.com/file/d/1r80OAtMWzDv38GB8VSBgHfDFkwNA3sbE/view?usp=sharing" target ="_blank" class="button">Learn More</a>
 
 								  <!-- JavaScript code -->
 							  <script>
@@ -149,7 +157,8 @@
 							</html>
 							
 						</article>
-						<!-- Contact -->
+
+						<!-- Contact 
 							<article id="contact" class="panel">
 								<header>
 									<h2>Contact Me</h2>
@@ -178,7 +187,7 @@
 							</article>
 
 					</div>
-
+						-->
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
