--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 								<br/><h4> Top 5 Fast - Food Chains in USA</h4>
 								<p> I extracted data from csv file with top 50 Fast - Foods to only top 5 Fast - Food Chains due to US Systemwide Sales and Average Sales per Unit.
 									This button bellow will link you to Google Colab for a full view</p>
-								<a href="https://drive.google.com/file/d/1r80OAtMWzDv38GB8VSBgHfDFkwNA3sbE/view?usp=sharing" target ="_blank" class="button">Learn More</a>
+								<a href="https://colab.research.google.com/drive/1r80OAtMWzDv38GB8VSBgHfDFkwNA3sbE" target ="_blank" class="button">Learn More</a>
 
 								  <!-- JavaScript code -->
 							  <script>
