--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<a href="#certificate" class="icon solid fa-certificate"><span>Certificate</span></a>
 						<a href="#work" class="icon solid fa-code"><span>Project</span></a>
 						<!-- <a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a> -->
-						<a href="https://www.facebook.com/thienkim9112002/" class="icon brands fa-facebook"><span>Facebook</span></a>
+						<a href="https://www.facebook.com/thienkim9112002/" class="icon brands fa-facebook" target="blank"><span>Facebook</span></a>
 					</nav>
 
 				<!-- Main -->
