--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			
 			.tooltip .tooltiptext {
 			  visibility: hidden;
-			  width: 120px;
+			  width: 250px;
 			  background-color: black;
 			  color: #fff;
 			  text-align: center;
@@ -118,7 +118,7 @@
 											<div class="tooltip">
                                             <a href="https://drive.google.com/file/d/1SbXJTDa6MUqC3ZRMW8hdfuEyZdBhfn_v/view?usp=sharing" target="_blank" class="image fit">
                                                 <img src="https://lh3.googleusercontent.com/ARtd9qblEr5NuHnaBVk_H8vU3TUBljM2pq1-RVv4FL1pXlR9McTWN4KwQx50WLCi8mBgb76nci1-R6cn7BzmAsaUaNb5_YSfoBoWCVy8goo6Zt4puKcKvNKe2HIIUgy7x-XLwyoBXiE=w2400"/>
-                                                <span class="tooltiptext">Click to View</span>
+                                                <span class="tooltiptext">Programming Foundation Fundamentals</span>
 											</a>
 											</div>
 										</div>
@@ -126,7 +126,7 @@
 											<div class="tooltip">
 											<a href="https://drive.google.com/file/d/17x_gN-XHKJiXlgGqiB6Y5ePsipGbcLN2/view?usp=share_link" target="_blank" class="image fit">
                                                 <img src="https://lh3.googleusercontent.com/FoxpBhqaXO-lLHf44fMYEJ5fVDt3vJoZ_MxJcBPOxl6evhh2jOZbnQbMoLegrCadlaaJ5gzNmZ5Dcc7V2JBCJiuk9NX1S3bvV5bPk39njYXmsQxd4U8qqWzl8yCubPCkHOCTUAscaxw=w2400"/>
-												<span class="tooltiptext">Click to View</span>
+												<span class="tooltiptext">Data Analysis Fundamentals</span>
 											</a>
 											</div>
 										</div>
@@ -134,15 +134,15 @@
 											<div class="tooltip">
 											<a href="https://drive.google.com/file/d/1og1VjFuL9YdyZdaWclvaUQUKlVoMY7og/view?usp=share_link"  target="_blank" class="image fit">
 												<img src="https://lh3.googleusercontent.com/6yzWriBI7bEeuJyYZz4PXvWbq4lOjsltoniGwjy2aUCwu-7rI4EI8yrRqbf9VOGrxUkiEjabqH-LX_OhEU9wDTuy5mmF4WiXVeytJT8kjJYKU3L9KjsVBj72IhjMvuQk6ji8uT2cQH4=w2400">
-												<span class="tooltiptext">Click to View</span>
+												<span class="tooltiptext">Python Fundamentals</span>
 											</a>
 											</div>
 										</div>
 										<div class="col-6">
 											<div class="tooltip">
-											<a href="https://drive.google.com/file/d/1omrMbs_YfoVuKYVCvloSeQUG4UvNrlVq/view?usp=sharing" target="_blank" class="image fit">
-												<img src="https://lh3.googleusercontent.com/pw/AMWts8CuDfOilTXOVMrs76X510pSj5uV7mXPh6UQ7wfn7V-p_TC__xRn5THOfq0qtkyHfs3zWOafX4Djlnf0ukX3Z_d2v7DN8Qh2xP0HcQHF_9Y5xofu4G0I=w2400">
-												<span class="tooltiptext">Click to View</span>
+											<a href="https://drive.google.com/file/d/16JoutOKSk9aNe3QmmB9Nt2EGLV-7s6_u/view?usp=sharing" target="_blank" class="image fit">
+												<img src="https://lh3.googleusercontent.com/pw/AJFCJaXsXzjqJhQQasuS5o7kdwBMBXKN3KrJBFMlq6ruwmt0iMieB2zTH1ceM3J0ZYSaK1P3oLxDrIMjhPg-VI1UdbC51zn40wN5OOJ_wqoK8UBnRg1XmfCc=w2400">
+												<span class="tooltiptext">Google Cloud Fundamentals</span>
 											</a>
 											</div>
 										</div>
@@ -151,7 +151,7 @@
 											<div class="tooltip">
 											<a href="https://drive.google.com/file/d/1UzPjow1MpV4_av8gD-Iu1kmcwGAGS8nc/view?usp=share_link" target="_blank" class="image fit">
 												<img src="https://lh3.googleusercontent.com/6xr94a_b35_lkWXrXspzk3_Cs_gtfzE_vd8XM67CypB5GKmxjvJP-g_lJHE2mB7Y0M-dtAy-qTZjfUcVQp2Ok2wu1sqFOIkarnZynA5hjNFuP9FHm54sAXVkpUVz06muWXYb0aS60sA=w2400">
-												<span class="tooltiptext">Click to View</span>
+												<span class="tooltiptext">Introduction to Cybersecurity</span>
 											</a>
 											</div>
 										</div>
@@ -159,7 +159,7 @@
 											<div class="tooltip">
 											<a href="https://drive.google.com/file/d/1sj1moehAgI5OwqVnG5D1HMLp6oZiCWBo/view?usp=share_link" target="_blank" class="image fit">
 												<img src="https://lh3.googleusercontent.com/uNmS3eEhuNCy8YSNcq3CMwNtIdbyrIG90wvrufpXa1tF8RCKwE7hW8vIFi9LMw9EKvhV-4JgCpGYS2QP6T_im06IAx_7oZLQ6BElnBjnAQtLehNlkzikJz9CtPJrzzZhSzi36rAlbk0=w2400">
-												<span class="tooltiptext">Click to View</span>
+												<span class="tooltiptext">Certificate of Merit</span>
 											</a>
 											</div>
 										</div>
