--- a/index.html
+++ b/index.html
@@ -181,14 +181,14 @@
 								<a href="https://kimnguyen2002.github.io/Group12/" target ="_blank" class="button">Click to View</a>
 							
 								<h4> Top 5 Fast - Food Chains in USA (Python)</h4>
-								<p> I extracted data from csv file with top 50 Fast - Foods Chains and classified only top 5 Fast - Food Chains, based on US Systemwide Sales and Average Sales per Unit.
+								<p> I extracted data from csv file with top 50 Fast - Foods Chains and cleaned dataset to sort out the top 5 Fast - Food Chains, based on US Systemwide Sales and Average Sales per Unit.
 									The button bellow will link you to Google Colab for a full view.</p>
-								<a href="https://colab.research.google.com/drive/1r80OAtMWzDv38GB8VSBgHfDFkwNA3sbE" target ="_blank" class="button">Click to View</a>
+								<a href="https://colab.research.google.com/drive/14KpAgf-QrVv9zCRLq305vxo89zWo2HnM#scrollTo=TdyJKduKATVQ" target ="_blank" class="button">Click to View</a>
 								
 								<h4>Short Analysis of Soul Specialty Coffee (Vietnamese Research)</h4>
 								<p>
 									This is just the short analysis to find a niche market for a coffeeshop that my friend is working.
-									They are basic datas but sufficient information based on coffee market.
+									These are basic data but given sufficient information based on coffee market.
 								</p>
 								<a href="https://drive.google.com/file/d/1xS3F4Gl_U88nRlB19F3EB5_YV4ozFO2y/view?usp=sharing" target ="_blank" class="button">Click to View</a>
 							</div>
