--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 							
 						</article>
 
-						<!-- Contact 
+						<!-- Contact -->
 							<article id="contact" class="panel">
 								<header>
 									<h2>Contact Me</h2>
@@ -265,7 +265,7 @@
 							</article>
 
 					</div>
-						-->
+						
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
