--- a/index.html
+++ b/index.html
@@ -216,16 +216,22 @@
 								<!-- The Modal -->
 							<div id="myModal" class="modal">
 								<div class="modal-content">
+									<h4>Analyze & Visualize Titanic Data (R)</h4>
+									<br/>
+									<p><b>To extract the Titanic dataset, I used R's built-in titanic package, which contains data on passengers who were aboard the Titanic. 
+										I then used many functions and packages in R to clean and prepare the data for analysis and visualization.
+										</b></p>
+
+									<p><b>The insights gained from this analysis can be useful in understanding the factors that influenced survival on the Titanic and may have implications in other areas where survival rates are a consideration.
+										</b></p>
+									<a href="https://colab.research.google.com/drive/1Mou2_jnjsDhLysiSCuIESCjlTT3DJVzA?usp=sharing" target ="_blank" class="button">Click to View</a>
+								</div>
+								<br/>
+								<div class="modal-content">
 									<h4> Stock Market (Python)</h4>
 									<br/>
 									<p><b>In my Python scripts, I begin by importing the necessary modules and libraries to connect to MongoDB and extract data from Yahoo Finance. 
 										Specifically, I establish a connection to the Yahoo Finance database to retrieve information pertaining to the stock markets of Google and Amazon over the course of one year.
-										</b></p>
-
-									<p><b>Overall, this script demonstrates how Python can be used to fetch, manipulate, and store financial data from a variety of sources, 
-										and how data visualization can aid in the analysis and interpretation of this data. 
-										By combining powerful libraries and tools like Pandas, Matplotlib, and MongoDB, I can build sophisticated data analysis pipelines to extract insights and inform decision-making.
-										
 										</b></p>
 									<a href="https://colab.research.google.com/drive/16eFfi7AZQnx3ITU14eDpQcFOjTEjVnzY" target ="_blank" class="button">Click to View</a>
 								</div>
