--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						<a href="#certificate" class="icon solid fa-certificate"><span>Certificates</span></a>
 						<a href="#work" class="icon solid fa-code"><span>Projects</span></a>
 						<!-- <a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a> -->
-						<a href="https://www.facebook.com/thienkim9112002/" class="icon brands fa-facebook" target="blank"><span>Facebook</span></a>
+						<a href="https://www.linkedin.com/in/kimnguyen2002/" class="icon brands fa-linkedin" target="blank"><span>LinkedIn</span></a>
 					</nav>
 
 				<!-- Main -->
