--- a/index.html
+++ b/index.html
@@ -112,12 +112,13 @@
 								<header>
 									<h2>Nguyen Huynh Thien Kim</h2>
 									<br/>
-									<h7><b>I'm a self-taught Front-End Developer and Data Scientist. 
-
-										Working with Big Data, Cloud Computing and
-										Machine Learning have been long-term goals of mine.
-
-										My main priority is to create solutions that drive real values and make a significant impact on every step.									
+									<h7><b>As a self-taught Data Scientist, 
+										I've developed a keen interest in the areas of Big Data, 
+										Cloud Computing, and Machine Learning. 
+										My primary focus is on creating solutions that deliver 
+										tangible value and make a meaningful impact at every stage. 
+										I'm committed to staying up-to-date with the latest technologies to ensure that my work is both innovative and effective.
+																			
 									</b></h7>
 								</header>
 								<a href="#certificate" class="jumplink pic">
@@ -140,17 +141,17 @@
 									<div class="row">
 										<div class="col-6">
 											<div class="tooltip">
-                                            <a href="https://drive.google.com/file/d/1EZj894ha26x0xTR6gXz8NswfqpY46Fuq/view?usp=sharing" target="_blank" class="image fit">
-                                                <img src="https://lh3.googleusercontent.com/dcgQIwQlZJUxp-F1erqUJVA82GpfFHscQae64rfilSETXljbtAe2t3PZDrKRpa6e9O0IYzKKhiHmOUS0-raMrrHgsRD7g3CRZNpGJzQobvN30vAs0xWszKesg7LIyWjL0TCtzxuW7yA=w2400"/>
-                                                <span class="tooltiptext">Google Data Analytics</span>
+                                            <a href="https://drive.google.com/file/d/1NL-Nh2M3DG-TeVr0IEBNCdCQrKxTGCS5/view?usp=sharing" target="_blank" class="image fit">
+                                                <img src="https://lh3.googleusercontent.com/YmMQZTafULQaRA4GnH6wBvqAxSw8SPOSW0p-rbMYNwlzPmz44rDoOO10VoR1_u_6NKifo_VkJtMMKR6mIJ7FKp6LRVDhuJ9L1exikGXtxbKNKBYGcYZ1lJ_zeRWXkKKcfQe_DdFpTck=w2400"/>
+                                                <span class="tooltiptext">Google IT Automation with Python </span>
 											</a>
 											</div>
 										</div>
 										<div class="col-6">
 											<div class="tooltip">
-                                            <a href="https://drive.google.com/file/d/1v0wLeZaXJ-pWeTarFmkhu7zdimShuFQk/view?usp=sharing" target="_blank" class="image fit">
-                                                <img src="https://lh3.googleusercontent.com/y1fxKHQuEhJ7zpdCSd-rSpvqiZBNEI5KnyD7zQRKblon9Gm0k4O_B7kZjCxNcPJVQ6ZWOvonBLj6_aR-9i1XgV_EhyM8cfSiYvN7JC00rPaBVhGFH71EoNRiezNkf1xE04qxpOd0aog=w2400"/>
-                                                <span class="tooltiptext">Data Analysis with R Programming </span>
+                                            <a href="https://drive.google.com/file/d/1EZj894ha26x0xTR6gXz8NswfqpY46Fuq/view?usp=sharing" target="_blank" class="image fit">
+                                                <img src="https://lh3.googleusercontent.com/dcgQIwQlZJUxp-F1erqUJVA82GpfFHscQae64rfilSETXljbtAe2t3PZDrKRpa6e9O0IYzKKhiHmOUS0-raMrrHgsRD7g3CRZNpGJzQobvN30vAs0xWszKesg7LIyWjL0TCtzxuW7yA=w2400"/>
+                                                <span class="tooltiptext">Google Data Analytics</span>
 											</a>
 											</div>
 										</div>
