--- a/index.html
+++ b/index.html
@@ -142,6 +142,14 @@
 									<div class="row">
 										<div class="col-6">
 											<div class="tooltip">
+                                            <a href="https://drive.google.com/file/d/14n4bfNjA-xsaDY9C91Yx4s7ehSM-m4Ve/view?usp=sharing" target="_blank" class="image fit">
+                                                <img src="https://lh3.googleusercontent.com/pw/ABLVV860TX4O7qWQnV3NTTwwbCfVrXSYnfP0WYtYHc2VxMgHboPD6ZgYtr1zEYNAorTz2HJM9wmKMlXmhmZMoLX97FuGvCPWEktQHH-CJhovcFk5vrsDI3WN=w2400"/>
+                                                <span class="tooltiptext">Machine Learning</span>
+											</a>
+											</div>
+										</div>
+										<div class="col-6">
+											<div class="tooltip">
                                             <a href="https://drive.google.com/file/d/1trba2YNVqpgotTDVgKL344CLJyh3kZU9/view?usp=sharing" target="_blank" class="image fit">
                                                 <img src="https://lh3.googleusercontent.com/pw/ABLVV85C_C5ntqdNvlZwCXAZ8aQYWJi7SA7mzwBBsWRJmTQK3nMK9-BGaDiw9seAJk5CR72BynSG_muUjWzU-xdbipKyEXB6LKzYr6KpeKIY88O1_74sX_CC=w2400"/>
                                                 <span class="tooltiptext">Introduction to TensorFlow in Python</span>
@@ -185,6 +193,54 @@
                                             <a href="https://drive.google.com/file/d/1674Pd9S-m055OGCLwq7_tid6gmNtecVr/view?usp=sharing" target="_blank" class="image fit">
                                                 <img src="https://lh3.googleusercontent.com/pw/ADCreHe10KhaP8v1HwMcwdjKJYQAMtsKmF_ie4y2B5EtR3VROSIwRXjgZCqLVbf2QV9ujoyHNbj-DdVhqWwvr5e5CRVduEGSmCQSAephfoLALmXlP3v9g8uL=w2400"/>
                                                 <span class="tooltiptext">Supervised Learning with scikit-learn</span>
+											</a>
+											</div>
+										</div>
+										<div class="col-6">
+											<div class="tooltip">
+                                            <a href="https://drive.google.com/file/d/1aRlTD64Rj1bEnUkuYoCZYJexo8DNMOTw/view?usp=sharing" target="_blank" class="image fit">
+                                                <img src="https://lh3.googleusercontent.com/pw/ABLVV86Bv5CPyrT-nvHKfNmHzYr8dQg5McNjiqJS3mkFBa4g_17PirzYgvQhpz4-5zxRIS6DlezaUXn2eXYqyVTh7b5Cdod-FM5MLxFYmp_XtGIpLanLeUcq=w2400"/>
+                                                <span class="tooltiptext">Introduction to Artificial Intelligence</span>
+											</a>
+											</div>
+										</div>
+										<div class="col-6">
+											<div class="tooltip">
+                                            <a href="https://drive.google.com/file/d/1oknEFNgda2RaF5_U-oMaYqOItwy01L71/view?usp=sharing" target="_blank" class="image fit">
+                                                <img src="https://lh3.googleusercontent.com/pw/ABLVV860o2CJu_dsSWwgp6M5r7iDIO-3fIYsfzkx7O-W4XFrLeDgj1AcrWFR9_4lFd2poU4_GYZEj5ozKIPYRG4A4Z1X05p0J4USFhsslFsWnS7LSGUowtn6=w2400"/>
+                                                <span class="tooltiptext">Ethics in the Age of Generative AI</span>
+											</a>
+											</div>
+										</div>
+										<div class="col-6">
+											<div class="tooltip">
+                                            <a href="https://drive.google.com/file/d/1v7sZnClMalq2UMkSMQWiuEj_ZfynOV-l/view?usp=sharing" target="_blank" class="image fit">
+                                                <img src="https://lh3.googleusercontent.com/pw/ABLVV87bGPJ3Js8YymkYGSZSKfP_kIO3XpWnqVZvH0khg0bVvU_VGdd9GyhnM0_sJE6yG7CDbu9Z7SlQbiBMjoBzNMgpopCdscdguAMLvVnXQTZYuKX3xQWj=w2400"/>
+                                                <span class="tooltiptext">Streamlining Your Work with Microsoft Bing Chat</span>
+											</a>
+											</div>
+										</div>
+										<div class="col-6">
+											<div class="tooltip">
+                                            <a href="https://drive.google.com/file/d/1vB1WVzgfPDj5gYSHvQuToWA3e-VszvC8/view?usp=sharing" target="_blank" class="image fit">
+                                                <img src="https://lh3.googleusercontent.com/pw/ABLVV85vTi4u1_QU12b8hNcfN0dpbjtxpij1_YLsK9Xsm_1YoeEQi7ffQBYgaZ6uad7DBDA__PJmpq1_UF26HW0QXjCHD87rxgW75lNI23_Db7h3cD3xGQkS=w2400"/>
+                                                <span class="tooltiptext">Gen AI: The Evolution of Thoughful Online Search</span>
+											</a>
+											</div>
+										</div>
+										<div class="col-6">
+											<div class="tooltip">
+                                            <a href="https://drive.google.com/file/d/1E60MCuXZvgvJUp35X6Q_PI2G9hUwWV2d/view?usp=sharing" target="_blank" class="image fit">
+                                                <img src="https://lh3.googleusercontent.com/pw/ABLVV85Cj2tmWrh6QxkoGVNuyVNh1F6-70rQ8bA-xLmlFyHO3nitLbzH42I3zRCTq97ZdJAV0YGxafSsi7qTs4ZlKbmAaDUy5E7qHiAXtnnDgcWNarnkzY54=w2400"/>
+                                                <span class="tooltiptext">Business Analysis Foundations</span>
+											</a>
+											</div>
+										</div>
+										<div class="col-6">
+											<div class="tooltip">
+                                            <a href="https://drive.google.com/file/d/1SehzS98Dchjl9Y3-XJQ0JMGuCJZCcr_E/view?usp=sharing" target="_blank" class="image fit">
+                                                <img src="https://lh3.googleusercontent.com/pw/ABLVV86nmHtavMStpE2a_juUiLK9pCMVqiHjy2UTSB-6unJtN1dUeFvuTLbepVHSJqU5vQmX38UM6zaZY92HtvEUuIDqjRqEORP0NUzKeWgdnGwIrhCh5LLH=w2400"/>
+                                                <span class="tooltiptext">What is Generative AI?</span>
 											</a>
 											</div>
 										</div>
