--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 									<p><b>I trained the Machine Learning model that used at three Multi-Classification Machine
 										Learning Algorithms, included Logistics Regression, K-Nearest Neighbor and Random Forest to predict multi-types of glass.
 										</b></p>
-									<a href="https://drive.google.com/file/d/1J2H3Rgu2xz6K1SEcuJ-oc47-UQ00hC5H/view?usp=sharing" target ="_blank" class="button">Click to View</a>
+									<a href="https://colab.research.google.com/drive/1B4fgk4Z9qhOySsAOp8baqOtqIzLoDM4n?usp=sharing" target ="_blank" class="button">Click to View</a>
 								</div>
 								<br/>
 								<div class="modal-content">
