--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			text-align: center;
 			text-decoration: none;
 			display: inline-block;
-			font-size: 18px;
+			font-size: 22px;
 			margin: 4px 2px;
 			transition-duration: 0.4s;
 			cursor: pointer;
@@ -140,6 +140,14 @@
 								</blockquote>
 								<section>
 									<div class="row">
+										<div class="col-6">
+											<div class="tooltip">
+                                            <a href="https://drive.google.com/file/d/1rSnTscZOJlIUKvSM-6wzkzYXkhu0U9Tz/view?usp=sharing" target="_blank" class="image fit">
+                                                <img src="https://lh3.googleusercontent.com/pw/ABLVV85VpT4qALU9VNKzfWmgtRWR4Tyg1AEUknniA1oqkjTEV87IBMhXbPJ4qnJ3JQ3OeTncD9T0vQQY-by53xDcsqm_3aNTqawAbR5r1ZbZuaLey-1MJ2S1=w2400"/>
+                                                <span class="tooltiptext">AWS Cloud Practitioner Essentials</span>
+											</a>
+											</div>
+										</div>
 										<div class="col-6">
 											<div class="tooltip">
                                             <a href="https://drive.google.com/file/d/14n4bfNjA-xsaDY9C91Yx4s7ehSM-m4Ve/view?usp=sharing" target="_blank" class="image fit">
@@ -305,7 +313,7 @@
 											<div class="tooltip">
 											<a href="https://drive.google.com/file/d/1sj1moehAgI5OwqVnG5D1HMLp6oZiCWBo/view?usp=share_link" target="_blank" class="image fit">
 												<img src="https://lh3.googleusercontent.com/uNmS3eEhuNCy8YSNcq3CMwNtIdbyrIG90wvrufpXa1tF8RCKwE7hW8vIFi9LMw9EKvhV-4JgCpGYS2QP6T_im06IAx_7oZLQ6BElnBjnAQtLehNlkzikJz9CtPJrzzZhSzi36rAlbk0=w2400">
-												<span class="tooltiptext">Certificate of Merit</span>
+												<span class="tooltiptext">Contribution in extra-curricular activities</span>
 											</a>
 											</div>
 										</div>
@@ -361,21 +369,33 @@
 								<!-- The Modal -->
 							<div id="myModal" class="modal">
 								<div class="modal-content">
+									<h4>White Wine Classification - Streamlit App</h4>
+									<br/>
+									<p><b>The Streamlit App is used to automatically predict different types of white
+										wine based on three Machine Learning models: Random Forest, Support Vector Machine and Logistic Regression.
+										</b></p>
+									<a href="https://wineclassification.streamlit.app/" target ="_blank" class="button">View the app</a>
+									<a href="https://github.com/kimnguyen2002/Wine_Classification/blob/main/whitewine.py" target ="_blank" class="button">View the source code</a>
+									<a href="https://github.com/kimnguyen2002/Wine_Classification/blob/main/winequality-white.csv" target ="_blank" class="button">View the dataset</a>
+								</div>
+								<br/>
+								<div class="modal-content">
 									<h4>Glass Classification</h4>
 									<br/>
 									<p><b>I trained the Machine Learning model that used at three Multi-Classification Machine
 										Learning Algorithms, included Logistics Regression, K-Nearest Neighbor and Random Forest to predict multi-types of glass.
 										</b></p>
-									<a href="https://colab.research.google.com/drive/1B4fgk4Z9qhOySsAOp8baqOtqIzLoDM4n" target ="_blank" class="button">Click to View</a>
+									<a href="https://colab.research.google.com/drive/1B4fgk4Z9qhOySsAOp8baqOtqIzLoDM4n" target ="_blank" class="button">View the source code</a>
+									<a href="https://github.com/kimnguyen2002/Glass-Classification/blob/main/glass.csv" target ="_blank" class="button">View the dataset</a>
 								</div>
 								<br/>
 								<div class="modal-content">
-									<h4> Stock Market (Python)</h4>
+									<h4> Stock Market </h4>
 									<br/>
-									<p><b>In my Python scripts, I begin by importing the necessary modules and libraries to connect to MongoDB and extract data from Yahoo Finance. 
-										Specifically, I establish a connection to the Yahoo Finance database to retrieve information pertaining to the stock markets of Google and Amazon over the course of one year.
+									<p><b>In my Python scripts, I began by importing the necessary modules and libraries to connect to MongoDB and extracted data from Yahoo Finance. 
+										Specifically, I established a connection to the Yahoo Finance database to retrieve information pertaining to the stock markets of Google and Amazon over the course of one year.
 										</b></p>
-									<a href="https://colab.research.google.com/drive/16eFfi7AZQnx3ITU14eDpQcFOjTEjVnzY" target ="_blank" class="button">Click to View</a>
+									<a href="https://colab.research.google.com/drive/16eFfi7AZQnx3ITU14eDpQcFOjTEjVnzY" target ="_blank" class="button">View the source code</a>
 								</div>
 								<br/>
 								<div class="modal-content">
@@ -385,7 +405,7 @@
 									They were created using function application and composition, with values being passed from one function to another. 
 									This approach also prevents state modification, reducing the risk of deadlocks when parallelizing the code.
 									</b></p>
-									<a href="https://kimnguyen2002.github.io/Group12/" target ="_blank" class="button">Click to View</a>
+									<a href="https://kimnguyen2002.github.io/Group12/" target ="_blank" class="button">View the website</a>
 								</div>
 								<br/>
 							</div>	
