--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <!--
-	Nguyen Huynh Thien Kim
+	Kim Nguyen
 	Portfolio | @kimnguyen9112002
 	Only for personal use
 -->
 <html>
 	<head>
-		<title>Nguyen Huynh Thien Kim</title>
+		<title>Kim Nguyen</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
