--- a/index.html
+++ b/index.html
@@ -111,13 +111,12 @@
 						<!-- Me -->
 							<article id="home" class="panel intro">
 								<header>
-									<h2>Nguyen Huynh Thien Kim</h2>
+									<h2>Kim Nguyen</h2>
 									<br/>
-									<h7><b>As a self-taught Machine Learning, 
-										I've developed a keen interest in the areas of
-										AI, Deep Learning and Neural Networks. 
-										My primary focus is on creating solutions that deliver 
+									<h7><b>As a self-taught Data Science and Machine Learning, 
+										I've developed a keen interest in creating solutions that deliver 
 										tangible value and make a meaningful impact at every stage. 
+										My primary focus is now on Bioinformatics, specifically in genetics, which is essential for real-word application. 
 										I'm committed to staying up-to-date with the latest technologies to ensure that my work is both innovative and effective.
 																			
 									</b></h7>
@@ -133,7 +132,7 @@
 								<header>
 									<h2>Certificates</h2>
 								</header>
-								<p><b>There are certificates that I have gained from learning activities and participation. It will be updated every few months.</b></p>
+								<p><b>There are certificates that I have gained from learning activities and participation.</b></p>
 								<p><b><u>Please note</u>: Clicking on picture leading to Google Drive for a full view of that one.</b></p>
 								<blockquote class="ludwig">
 									<b>Knowledge isn't free. You have to pay attention.</b>
