--- a/index.html
+++ b/index.html
@@ -112,12 +112,13 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h2>Kim Nguyen</h2>
+									<br/>
 									<h7><b>
 										As a self-taught Data Science and Machine Learning, 
 										I've developed a keen interest in creating solutions that deliver 
 										tangible value and make a meaningful impact at every stage. 
 										My primary focus is now on Bioinformatics, specifically in genetics, which is essential for real-word application.
-																			
+										 I'm committed to staying up-to-date with the latest technologies to ensure that my work is both innovative and effective.									
 									</b></h7>
 								</header>
 								<a href="#certificate" class="jumplink pic">
