--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 						<!-- <a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a> -->
 						<a href="#instagram" class="icon brands fa-instagram"><span>Instagram</span></a>
 						<a href="https://www.linkedin.com/in/kimnguyen2002/" class="icon brands fa-linkedin" target="blank"><span>LinkedIn</span></a>
+						<a href="https://github.com/kimnguyen2002" class="icon brands fa-github" target="blank"><span>Github</span></a>
 					</nav>
 
 				<!-- Main -->
