--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@
 						<!-- <a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a> -->
 						<a href="#instagram" class="icon brands fa-instagram"><span>Instagram</span></a>
 						<a href="https://www.linkedin.com/in/kimnguyen2002/" class="icon brands fa-linkedin" target="blank"><span>LinkedIn</span></a>
-						<a href="https://github.com/kimnguyen2002" class="icon brands fa-github" target="blank"><span>Github</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -473,7 +472,7 @@
 							</p></b>
 							</div>
 							
-							<div style="position:relative;padding-top:0;width:700px;height:400px;">
+							<div style="position:relative;padding-top:max(60%,324px);width:100%;height:0;">
 								<iframe style="position:absolute;border:none;width:100%;height:100%;left:0;top:0;" src="https://online.fliphtml5.com/jvhqy/svga/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" >
 								</iframe>
 							</div>
