--- a/index.html
+++ b/index.html
@@ -117,9 +117,10 @@
 									<div style="text-align: justify;">
 									<h7><b>
 										As a self-taught Data Science and Machine Learning, 
-										I've developed a keen interest in creating solutions that deliver 
+										I have developed a keen interest in creating solutions that deliver 
 										tangible value and make a meaningful impact at every stage. 
-										My primary focus is now on Bioinformatics, specifically in genetics, which is essential for real-word application.
+										My primary focus is now on Bioinformatics, specifically in genetics, 
+										which is essential for real-word application and medical system.
 									</b></h7>
 									</div>
 								</header>
@@ -462,13 +463,14 @@
 							</header>
 							<div style="text-align: justify;">
 							<b><p>
-								Life is a colorful canvas, and each photograph has a story hidden behind it. Through the lens, I aim to convey meaningful and impactful messages to the world.
+								Life is a colorful canvas, and each picture has a story hidden behind it. Through the lens, I aim to convey meaningful and impactful messages to the world.
 							</p>
 							<p>
-								My work is about using the power of visual storytelling to connect with people on a deeper level. Each photograph I take is a window into a moment in time, a glimpse into the lives of the subjects I photograph.
+								My work is about using the power of visual storytelling to connect with people on a deeper level. Each picture I take is a window into a moment in time, a glimpse into the lives of the subjects I photograph.
 							</p>
 							<p>	
-								By focusing on the stories behind the images, I strive to create a bridge between the viewer and the subject, allowing people to see the world through a different lens and gain a deeper appreciation for the diversity and complexity of the human experience. It's my belief that photography has the power to transcend borders, break down barriers, and bring people together in a shared understanding of our common humanity.
+								By focusing on the stories behind the images, I strive to create a bridge between the viewer and the subject, allowing people to see the world through a different lens and gain a deeper appreciation for the diversity and complexity of the human experience. 
+								It is my belief that photography has the power to transcend borders, break down barriers, and bring people together in a shared understanding of our common humanity.
 							</p></b>
 							</div>
 							
@@ -483,6 +485,7 @@
                                 <header>
                                     <h2>Instagram Page</h2>
                                 </header>
+				<div style="text-align: justify;">
                                 <p><b>I have created this page specifically for aspiring AI learners who are unsure of where to start and how to approach their studies. As someone who has also self-taught in this field, 
                                     I wanted to create a page that covers the knowledge I have acquired.
                                 </b></p>
@@ -490,6 +493,7 @@
                                 <p><b>This Instagram page will provide a comprehensive learning journey, taking you from the fundamentals to advanced concepts in Machine Learning and Data Science. 
                                     The content will be designed to be easily understandable, minimizing the mathematical complexity and emphasizing practical implementation.
                                 </b></p>
+				</div>
                                 <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CvZuscpSopX/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
                                     <div style="padding:16px;">
                                        <a href="https://www.instagram.com/p/CvZuscpSopX/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
