--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 											</div>
 										</section>
 										<!--AI & ML-->
-									<h4 style="text-align:center"><b>AI - Machine Learning</b></h4>
+									<h4 style="text-align:center"><b>AI - Machine Learning - Data Analytics</b></h4>
 									<br/>
 									<section>
 										<div class="row">
