--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!--
 	Kim Nguyen
-	Portfolio | @kimnguyen9112002
+	Portfolio | @kimnguyen2002
 	Only for personal use
 -->
 <html>
@@ -628,7 +628,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; Kim Nguyen</li><li>Email: <a href = "mailto: kimnguyen9112002@gmail.com">Kim Nguyen</a></li>
+							<li>&copy; Kim Nguyen</li><li>Email: <a href = "mailto: kimnguyen.developer@gmail.com">kimnguyen.developer@gmail.com</a></li>
 						</ul>
 					</div>
 
