--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 									They were created using function application and composition, with values being passed from one function to another. 
 									This approach also prevents state modification, reducing the risk of deadlocks when parallelizing the code.
 									</b></p>
-									<a href="https://kimnguyen2002.github.io/Group12/" target ="_blank" class="button">View the website</a>
+									<a href="https://kimnguyen2002.github.io/Simple-Python-Games/" target ="_blank" class="button">View the website</a>
 								</div>
 								<br/>
 							</div>	
