--- a/index.html
+++ b/index.html
@@ -422,6 +422,18 @@
 								<!-- The Modal -->
 							<div id="myModal" class="modal">
 								<div class="modal-content" style="text-align: justify;">
+									<h4>Retrieving Biological Data</h4>
+									<br/>
+									<p><b>My focus is to query the Europe PMC API to retrieve information related to the term "gene". 
+										By constructing the API request with the specified query and parameters, 
+										the code fetches the relevant data in JSON format and stores it in the "gen_data" variable for further use or analysis.</p>
+										<p>The key purpose of this code is to programmatically access and extract data from the EBI Europe PMC API based on a specific search query, 
+										allowing the user to incorporate this data into their broader application or research workflow.
+									</b></p>
+									<a href="https://colab.research.google.com/drive/1KBPbEEqhrHGpxUn_VqO0fsl0UYo9M9I6?usp=sharing" target ="_blank" class="button">View the source code</a>
+								</div>
+								<br/>
+								<div class="modal-content" style="text-align: justify;">
 									<h4>White Wine Classification - Streamlit App</h4>
 									<br/>
 									<p><b>The Streamlit App is used to automatically predict different types of white
