--- a/index.html
+++ b/index.html
@@ -206,6 +206,14 @@
 										<div class="row">
 											<div class="col-6">
 												<div class="tooltip">
+												<a href="https://drive.google.com/file/d/1RH63MSJ3ujbW6PvqfouLTcWAlKR1i1fa/view?usp=sharing" target="_blank" class="image fit">
+													<img src="https://lh3.googleusercontent.com/pw/AP1GczPKne_jMVi0bKLyoAuogoLySs3ULUDohaPWIDkexmla_dujU0oW3OtMwl-jPnqb2-ZKBvPCKKw246wq4v2zQi_odTKKS-68TErXq9RzK38ZR41iznMA=w2400"/>
+													<span class="tooltiptext">Gemini API by Google</span>
+												</a>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="tooltip">
 												<a href="https://drive.google.com/file/d/14n4bfNjA-xsaDY9C91Yx4s7ehSM-m4Ve/view?usp=sharing" target="_blank" class="image fit">
 													<img src="https://lh3.googleusercontent.com/pw/ABLVV860TX4O7qWQnV3NTTwwbCfVrXSYnfP0WYtYHc2VxMgHboPD6ZgYtr1zEYNAorTz2HJM9wmKMlXmhmZMoLX97FuGvCPWEktQHH-CJhovcFk5vrsDI3WN=w2400"/>
 													<span class="tooltiptext">Machine Learning</span>
