--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 										I have developed a keen interest in creating solutions that deliver 
 										tangible value and make a meaningful impact at every stage. 
 										My primary focus is now on Bioinformatics, specifically in genetics, 
-										which is essential for real-word application and medical system.
+										which is essential for real-world application and medical system.
 									</b></h7>
 									</div>
 								</header>
